<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/reminder_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingVertical="8dp"
            android:text="Reminder One"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/schedule_reminder_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reminder_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11.00 AM"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/reminder_name"
            app:layout_constraintTop_toBottomOf="@+id/reminder_name" />


        <ImageView
            android:id="@+id/delete_reminder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_reminder_icon"
            android:padding="8dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/edit_reminder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/edit_reminder_icon"
            android:padding="8dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toStartOf="@id/delete_reminder_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/schedule_reminder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/schedule_reminder_icon"
            android:padding="8dp"
            android:src="@drawable/ic_schedule"
            app:layout_constraintEnd_toStartOf="@id/edit_reminder_button"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>